automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
      "traceback": [
       "\u001b[0;31m\u001b[0m",
       "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-7d33c319c667>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Seaborn makes everything so pretty! Check out details here:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# This is optional but makes a nice design for all of our proceeding graphs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0msns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_style\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'darkgrid'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-14-7d33c319c667>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Seaborn makes everything so pretty! Check out details here:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# This is optional but makes a nice design for all of our proceeding graphs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0msns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_style\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'darkgrid'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m: name 'sns' is not defined"
      ]
     }
@@ -160,25 +160,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f015f4ad860>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f015f472f28>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f015f4214e0>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f015f3c8a58>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f015f3f2fd0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f015f3a1588>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f015f346b00>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f015f2f90f0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f015f2f9128>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f015f130e48>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f015f0efdd8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f015f09e390>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f015effe908>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f015f027e80>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f015efd8438>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x7f015ef7f9b0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f015efa9a20>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x7f015efa9a58>]],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
